03-cb-cd-private-gke/apps/myapp.yaml
apiVersion: v1
kind: Pod
metadata:
 name: myweb
 labels:
  app: myweb
spec:
 containers:
 - name: myweb
   image: image
   imagePullPolicy: Always
   ports:
   - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: mywebsvc
spec:
 type: CLusterIP
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 80
 selector:
  app: myweb
 #loadBalancerSourceRanges:
 # -"0.0.0.0/0" # mention your source ip here, so that this service will only respond to the request from the mentioned particular IP
