03-cb-cd-private-gke/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.global-static-ip-name: inngress
  name: test-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: mywebsvc
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
